--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -3,25 +3,23 @@
   "version": "2.0.0",
   "description": "",
   "engines": {
-    "node": "14.15.0"
+    "node": "16.18.1"
   },
   "main": "server.ts",
   "scripts": {
-    "start": "node ./www/server.js",
-    "tsc": "npx tsc",
-    "dev": "npx ts-node-dev --respawn ./src/server.ts --transpile-only ",
+    "start": "node ./server.js",
+    "tsc": "npx tsc --types node",
+    "dev": "npx ts-node ./src/server.ts ",
     "prod": "npx tsc && node ./www/server.js",
     "clean": "rm -rf www/ || true",
     "deploy": "npm run build && eb list && eb use udagram-api-dev && eb deploy",
-    "build": "npm install . && npm run clean && tsc && cp -rf src/config www/config && cp -R .elasticbeanstalk www/.elasticbeanstalk && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd ..",
+    "build": "npm install . && npm run clean && npm run tsc && cp -rf src/config www/config && cp -R .elasticbeanstalk www/.elasticbeanstalk && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd ..",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Gabriel Ruttner",
   "license": "ISC",
   "dependencies": {
-    "@types/bcryptjs": "2.4.2",
-    "@types/jsonwebtoken": "^8.3.2",
     "aws-sdk": "^2.429.0",
     "bcryptjs": "2.4.3",
     "body-parser": "^1.18.3",
@@ -29,17 +27,19 @@
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
     "express": "^4.16.4",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.5.0",
     "sequelize-typescript": "^2.1.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/bluebird": "^3.5.26",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.16.1",
-    "@types/node": "^11.11.6",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/node": "^18.11.18",
     "@types/sequelize": "^4.27.44",
     "@types/validator": "^10.9.0",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
@@ -48,8 +48,8 @@
     "chai-http": "^4.2.1",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
-    "mocha": "^6.1.4",
-    "ts-node-dev": "^1.0.0-pre.32",
+    "mocha": "^10.2.0",
+    "ts-node": "^10.8.1",
     "typescript": "^4.2.3"
   }
 }
