--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,7 @@ jobs:
             npm run frontend:build
             npm run backend:build
             npm run deploy
+            echo "DEPLOYED SUCCESSFULLY :)"
 
 workflows:
   udagram:
