--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,11 @@ jobs:
     docker:
       # the base image can run most needed actions with orbs
       - image: "cimg/node:14.15"
+    parallelism: 3
     steps:
       # install node and checkout code
       - node/install:
-          node-version: '14.15'         
+          node-version: "14.15"
       - checkout
       # Use root level package.json to install dependencies in the frontend app
       - run:
@@ -24,30 +25,30 @@ jobs:
             echo "NPM --version" 
             echo $(npm --version)
             npm run frontend:install
-      # TODO: Install dependencies in the the backend API        
+      # Install dependencies in the the backend API
       - run:
           name: Install API Dependencies
           command: |
-           echo "TODO: Install dependencies in the the backend API "
-           npm run api:install  
-      # TODO: Lint the frontend
+            echo "TODO: Install dependencies in the the backend API "
+            npm run api:install
+      # Lint the frontend
       - run:
           name: Front-End Lint
           command: |
             echo "TODO: Lint the frontend"
-            npm run frontend:lint 
-      # TODO: Build the frontend app
+            npm run frontend:lint
+      # Build the frontend app
       - run:
           name: Front-End Build
           command: |
             echo "TODO: Build the frontend app"
             npm run frontend:build
-      # TODO: Build the backend API      
+      # Build the backend API
       - run:
           name: API Build
           command: |
             echo "TODO: Build the backend API"
-            npm run api:build
+            npm run api:build  
   # deploy step will run only after manual approval
   deploy:
     docker:
@@ -55,19 +56,15 @@ jobs:
       # more setup needed for aws, node, elastic beanstalk
     steps:
       - node/install:
-          node-version: '14.15' 
+          node-version: "14.15"
       - eb/setup
       - aws-cli/setup
       - checkout
       - run:
           name: Deploy App
-          # TODO: Install, build, deploy in both apps
+          # Install, build, deploy in both apps
           command: |
-            echo "# TODO: Install, build, deploy in both apps"
-            npm run frontend:install
-            npm run api:install
-            npm run frontend:build
-            npm run api:build
+            echo "deploy in both apps"
             npm run deploy
             echo "DEPLOYED SUCCESSFULLY :)"
 
