modified circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,8 @@ jobs:
           # Install, build, deploy in both apps
           command: |
             echo "setting enviroment variables for EB"
-            eb setenv AWS_PROFILE=$AWS_PROFILE AWS_REGION=$AWS_DEFAULT_REGION DB_PORT=$DB_PORT JWT_SECRET=$JWT_SECRET PORT=$PORT POSTGRES_DB=$POSTGRES_DB POSTGRES_HOST=$POSTGRES_HOST POSTGRES_PASSWORD=POSTGRES_PASSWORD POSTGRES_USERNAME=$POSTGRES_USERNAME URL=$URL
+            eb setenv AWS_PROFILE=$AWS_PROFILE AWS_REGION=$AWS_DEFAULT_REGION
+            eb setenv DB_PORT=$DB_PORT JWT_SECRET=$JWT_SECRET PORT=$PORT POSTGRES_DB=$POSTGRES_DB POSTGRES_HOST=$POSTGRES_HOST POSTGRES_PASSWORD=POSTGRES_PASSWORD POSTGRES_USERNAME=$POSTGRES_USERNAME URL=$URL
       - run:
           name: Deploy App
           # Install, build, deploy in both apps
