--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,8 +64,10 @@ jobs:
           name: Passing enviroment variables to EB 
           # Install, build, deploy in both apps
           command: |
-            echo "setting enviroment variables for EB ${AWS_PROFILE}"
-            eb setenv AWS_PROFILE=$AWS_PROFILE 
+            echo "setting enviroment variables for ${AWS_REGION}"
+
+            
+            
       - run:
           name: Deploy App
           # Install, build, deploy in both apps
