--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,14 +60,13 @@ jobs:
       - eb/setup
       - aws-cli/setup
       - checkout
-       - run:
+      - run:
           name: Passing enviroment variables to EB 
           # Install, build, deploy in both apps
           command: |
-            echo "setting enviroment variables for ${AWS_REGION}"
-
-            
-            
+            echo "setting enviroment variables for EB"
+            eb setenv AWS_PROFILE=$AWS_PROFILE AWS_REGION=$AWS_DEFAULT_REGION
+            eb setenv DB_PORT=$DB_PORT JWT_SECRET=$JWT_SECRET PORT=$PORT POSTGRES_DB=$POSTGRES_DB POSTGRES_HOST=$POSTGRES_HOST POSTGRES_PASSWORD=POSTGRES_PASSWORD POSTGRES_USERNAME=$POSTGRES_USERNAME URL=$URL   
       - run:
           name: Deploy App
           # Install, build, deploy in both apps
