--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
           name: API Build
           command: |
             echo "TODO: Build the backend API"
-            npm run api:build  
+            npm run api:build
   # deploy step will run only after manual approval
   deploy:
     docker:
@@ -65,6 +65,7 @@ jobs:
           # Install, build, deploy in both apps
           command: |
             echo "deploy in both apps"
+            eb setenv PORT=$PORT POSTGRES_DB=$POSTGRES_DB POSTGRES_HOST=$POSTGRES_HOST POSTGRES_PASSWORD=$POSTGRES_PASSWORD POSTGRES_USERNAME=$POSTGRES_USERNAME URL=$URL  
             npm run deploy
             echo "DEPLOYED SUCCESSFULLY :)"
 
