--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,8 @@ jobs:
           # Install, build, deploy in both apps
           command: |
             echo "deploy in both apps"
+            eb create udagram-api-dev
+            eb setenv DB_PORT=$DB_PORT JWT_SECRET=$JWT_SECRET PORT=$PORT POSTGRES_DB=$POSTGRES_DB POSTGRES_HOST=$POSTGRES_HOST POSTGRES_PASSWORD=$POSTGRES_PASSWORD POSTGRES_USERNAME=$POSTGRES_USERNAME URL=$URL   
             npm run deploy
             echo "DEPLOYED SUCCESSFULLY :)"
 
